# ATLAS

./: .env.example  .gitignore  CLAUDE.md  FINDINGS.md  FORWARD_TEST.md  README.md  RESEARCH_QUEUE.md  WINDOWS_SETUP.md  acceptance_report.py  analyzer.py  atlas_hook.zsh  backtest.py  catchup.sh  collect_cycle.sh  collector.py  dashboard.py  execution_guard.py  experiments.jsonl  experiments.py  extra_collect.py  features.py  forward_eval.py  health_report.py  instruments.py  journal.db  journal.py  live_h2_runner.py  live_model_build.py  market.duckdb.wal  mission_control.py  pyproject.toml  registry.py  research_best.py  research_deephistory.py  research_deeppool.py  research_era.py  research_meta.py  research_otc.py  research_pooled.py  research_registry.jsonl  (+15 more)
docs/superpowers/specs/: 2026-07-24-mission-control-design.md
models/: h2-20260722.pkl  h4-20260722.pkl  meta-h3.pkl
tests/: test_analyzer.py  test_bundles_payouts.py  test_collect_cycle.py  test_collector.py  test_corrections.py  test_features.py  test_health_report.py  test_mission_control.py  test_storage_validation.py  test_train.py  test_validation_stats.py
