[project]
name = "atlas-iqoption"
version = "0.1.0"
description = "IQ Option demo-only data, features and walk-forward pipeline (validation by MIDAS)"
requires-python = ">=3.12"
dependencies = [
  "mcp",
  "duckdb",
  "pandas",
  "pandera",
  "pyarrow",
  "ta",
  "scikit-learn",
]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
# Only the project's own tests; vendor/ contains the vendored iqoptionapi
# clone whose integration tests require a live broker login.
testpaths = ["tests"]
